# API_tilda

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tables.sql
src/: main.py
src/api/: urls.py
src/api/endpoints/: colegios.py  estudiantes.py  facturas.py  health.py
src/config/: .env.txt  database_connection.py  manage_session.py  settings.py
src/database_models/: colegio_model.py  estudiantes_model.py  facturas_model.py
src/managers/: colegios.py  database_operations.py  estudiantes.py  facturas.py
src/schemas/: colegios.py  estudiantes.py  facturas.py  health.py
src/services/: colegios.py  estudiantes.py  facturas.py
src/tests/: test_invoices.py
src/utils/: response.py
