[tool.poetry]
name = "api-tilda"
version = "0.1.0"
description = "Technical test"
authors = ["V"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
loguru = ">=0.7.3,<0.8.0"
fastapi = {extras = ["standard"], version = "^0.116.1"}
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
pre-commit = ">=4.2.0,<5.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
pytest = ">=8.4.1,<9.0.0"
coverage = ">=7.9.1,<8.0.0"
pytest-cov = ">=6.2.1,<7.0.0"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
pudb = "^2025.1"
pytest = "^8.4.1"
coverage = "^7.9.1"
pytest-cov = "^6.2.1"

[tool.ruff]
line-length = 90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
